@@ -22,6 +22,8 @@ Backup and Migrate 5.0.x-dev, xxxx-xx-xx
 #3214038 by DamienMcKenna: Discourage "full site" backup option.
 #3197359 by larisse, bart lambert, DamienMcKenna, hmendes: Encryption fails to
   produce backup.
+#3156794 by larisse, hmendes, pglatz, DamienMcKenna: Add token support to
+  filename output.
 
 
 Backup and Migrate 5.0.0-rc2, 2020-09-28
